# lumen

./: .gitignore  API.md  BENCHMARKS.md  CNAME  CONTRIBUTING.md  Cargo.toml  DESIGN.md  InRelease  JOURNAL.md  LICENSE  OPCODES.md  Packages  README.md  Release  Release.gpg  SPEC.md  TUTORIAL.md  lumen-archive-keyring.asc  lumen-archive-keyring.gpg  lumen_0.1.0-1_amd64.deb  lumen_0.1.0-1_arm64.deb  lumen_0.2.0-1_amd64.deb  lumen_0.2.0-1_arm64.deb  lumen_0.3.0-1_amd64.deb  lumen_0.3.0-1_arm64.deb  lumen_0.4.0-1_amd64.deb  lumen_0.4.0-1_arm64.deb  lumen_0.5.0-1_amd64.deb  lumen_0.5.0-1_arm64.deb
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md
examples/: 01_hello.lum  02_values.lum  03_control_flow.lum  04_functions.lum  05_closures.lum  06_classes.lum  07_collections.lum  08_strings.lum  09_exceptions.lum  10_pattern_matching.lum  11_modules.lum  12_json.lum  13_fizzbuzz.lum  14_algorithms.lum  15_wordcount.lum  16_params_and_destructure.lum  17_calculator.lum  18_data_structures.lum  19_json_tool.lum  20_spread_calls.lum  21_operator_overloading.lum  22_static_and_fields.lum  23_generators.lum  24_tail_calls.lum  25_comprehensions.lum  26_files.lum  27_subprocess.lum  geometry.lum
packaging/homebrew/: lumen.rb
src/: ast.rs  ast_printer.rs  builtins.rs  chunk.rs  compiler.rs  debugger.rs  diagnostics.rs  disassembler.rs  fxhash.rs  gc.rs  highlight.rs  lexer.rs  lib.rs  lineedit.rs  lsp.rs  main.rs  object.rs  opcode.rs  parser.rs  project.rs  repl.rs  resolver.rs  span.rs  token.rs  util.rs  value.rs  vm.rs
src/stdlib/: array.rs  datetime.rs  hash.rs  io.rs  json.rs  map.rs  math.rs  mod.rs  os.rs  random.rs  regex.rs  string.rs  time.rs
src/vm/: builtins.rs
std/: functional.lum  path.lum  seq.lum  set.lum  testing.lum
tests/: coverage.rs  diagnostics.rs  e2e.rs  errors.rs  features.rs  fuzz.rs  gc_stress.rs  generational.rs  io_os_time.rs  stdlib.rs  vm.rs  vm_fuzz.rs
tests/expected/: 01_hello.txt  02_values.txt  03_control_flow.txt  04_functions.txt  05_closures.txt  06_classes.txt  07_collections.txt  08_strings.txt  09_exceptions.txt  10_pattern_matching.txt  11_modules.txt  12_json.txt  14_algorithms.txt  15_wordcount.txt  (+12 more)
