[package]
name = "lumen"
version = "0.1.0"
edition = "2021"
description = "Lumen — a dynamic, bytecode-compiled programming language"
license = "MIT"

[lib]
name = "lumen"
path = "src/lib.rs"

[[bin]]
name = "lumen"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
